kube-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
   - host: kube.lesquerra.cat
     http:
       paths:  
         - backend:
             serviceName: kubernetes-dashboard
             servicePort: 443
  tls:
  - hosts:
    - kube.lesquerra.cat
    secretName: tlssecret
